--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,4 @@
-== README
+== ONOZOR.COM
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Onozor.com is an informative website in question & answer forum(Qoura, Stackoverflow), job posting, blog, and community network building.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
